# Miscellaneous

./: ToKnow.txt
Autodesk/script/: 000000000000000_manual_work.txt  10_call_amake.bat  1_WixScript.bat  1_output_wixfilelist.txt  2_mapping_structure - Copy.bat  2_mapping_structure.bat  2_output_ID_Name_mapping.txt  2_output_all_dirfragment.txt  2_output_for_step6_dirfragment.txt  2_output_tmp_mapping.tmp  2_output_tmp_resolve_conflict.txt  4_formatXML.bat  4_output_for_step5_creat_include.txt  7_1_CreateMSMProject.bat  7_1_output_msmProject_list.txt  7_1_output_uuid.txt  IntegrateIntoACEREREG.txt
Autodesk/script/1_output_RawWixFiles/: .bin.wxs  chai.wxs  express.wxs  livedb-mongo.wxs  livedb.wxs  microevent.wxs  mocha.wxs  nconf.wxs  node-windows.wxs  share-js-stream.wxs  share.wxs  sinon.wxs  winston.wxs  ws.wxs
Autodesk/script/1_output_ResultWixFiles/: bin.wxs  chai.wxs  express.wxs  livedb-mongo.wxs  livedb.wxs  microevent.wxs  mocha.wxs  nconf.wxs  node-windows.wxs  share-js-stream.wxs  share.wxs  sinon.wxs  winston.wxs  ws.wxs
Autodesk/script/3_AddDirectoryForComponent/: AddDirectoryForComponent.sln
Autodesk/script/4_output_AfterFormatting/: bin.wxs  chai.wxs  express.wxs  livedb-mongo.wxs  livedb.wxs  microevent.wxs  mocha.wxs  nconf.wxs  node-windows.wxs  share-js-stream.wxs  share.wxs  sinon.wxs  winston.wxs  ws.wxs
Autodesk/script/5_Create_Include/: Create_Include.sln
Autodesk/script/5_output_wix_include_dir/: all_in_one.txt  bin.txt  chai.txt  express.txt  livedb-mongo.txt  livedb.txt  microevent.txt  mocha.txt  nconf.txt  node-windows.txt  share.txt  (+4 more)
Autodesk/storage/: 3.bat  7_1_CreateMSMProject - Copy.bat  COLOR.bat  test.bat  tfs_purge.bat  zz_getACEScript_4_FileMigration.bat  zz_getfiles.bat
Bosch/: CopyBinaryPool.ps1  ELK dev log.txt  ImportActivate.ps1  ImportGuardSessions.ps1  RunMeFirst.bat  SetupEndeavourBackend.ps1  VPN Application Process.doc  VRM work log.txt  VideoSimulator.ps1  VideoSimulator.psd1  VideoSimulator.psm1  mklink.bat
Bosch/endeavour_conf/: backend_log.conf  backend_trace.conf  iis.conf
Bosch/src_test/: CMakeLists.txt
Bosch/src_test/src/: CMakeLists.txt  CMakeProjectLists.txt
Bosch/src_test/src/google_test_lib/: CMakeLists.txt  gtest.cpp  gtest.h
Bosch/src_test/src/user_management/: AuthObjectTests.cpp  BuiltinAuthenticationInfoTests.cpp  CMakeLists.txt  CameraAuthObjectTests.cpp  DefaultAuthenticationInfoTests.cpp  DefaultUserManagementTests.cpp  LoginRequestTests.cpp  SampleTest.cpp  TokenAuthenticationInfoTests.cpp  TranscoderAuthObjectTests.cpp  UserCredentialTests.cpp
Bosch/src_test/src/vrm_mock_lib/: CMakeLists.txt
Bosch/src_test/src/vrm_mock_lib/include/: Config.h  MockAuthObject.h  MockCameraId.h  MockElement.h  MockGuid.h  MockHttpServer.h  MockLoginRequest.h  MockMd5.h  MockRmsServer.h  MockUserCredential.h  MockUserId.h
Bosch/src_test/src/vrm_mock_lib/include/rcpp/: server.h
Bosch/src_test/src/vrm_mock_lib/include/vcslib/: FileSystem.h  Guid.h  HostAddress.h  Md5.h  Networking.h  Types.h
Bosch/src_test/src/vrm_mock_lib/include/vcslib/xml/: Element.h
Bosch/src_test/src/vrm_mock_lib/include/vrmsrc/config/: AccessManagement.h
Bosch/src_test/src/vrm_mock_lib/include/vrmsrc/httpserver/: HttpServer.h  SessionList.h
Bosch/src_test/src/vrm_mock_lib/include/vrmsrc/media_database/: Camera.h  Device.h
Bosch/src_test/src/vrm_mock_lib/include/vrmsrc/rcpserver/: RmsServer.h  RmsSession.h
Bosch/src_test/src/vrm_mock_lib/include/vrmsrc/util/: CameraId.h  System.h  TypeDefs.h  UserId.h
Bosch/src_test/src/vrm_mock_lib/src/: VrmMocks.cpp
Bosch/src_test/src/vrm_mock_lib/src/vcslib/: FileSystem.cpp  Guid.cpp  HostAddress.cpp  Md5.cpp  Networking.cpp
Bosch/src_test/src/vrm_mock_lib/src/vcslib/xml/: Element.cpp
Bosch/src_test/src/vrm_mock_lib/src/vrmsrc/: AccessManagement.cpp  Camera.cpp  CameraId.cpp  Device.cpp  HttpServer.cpp  RmsServer.cpp  RmsSession.cpp  SessionList.cpp  System.cpp  UserId.cpp
C++/: Bathroom.cpp  PancakeFlipper.cpp  Ratatouille.cpp  StableNeighbours.cpp  TidyNumber.cpp  VirtualInheritance.cpp  class declaration and constructor.txt  function pointer.cpp
CPlusPlus/: Cake.cpp  CountingSheep.cpp  CruiseControl.cpp  Rsa.cpp  Rsa.h  class declaration and constructor.txt  function pointer.cpp  main.cpp
CodingGuidelinesDesignRules/: Coding Guideline.doc  Coding Guidelines Matrix.xlsx
CodingGuidelinesDesignRules/Endeavour coding guidelines/: Coding Guidelines Matrix.xlsx  Coding Guidelines.docx  SQL Coding Guidelines.docx
DesignPattern/: DesignPattern.1  FactoryInDP.h  Obeserver.cpp  Obeserver.h  ObserverInDP.cpp  ObserverInDP.h  SelfLearning.1  main 2.cpp  main.cpp
DesignPattern/more/: DecoratorInDP.h  ObserverInDP.h  SingletonInDP.h  main.cpp
(+756 files in other folders)
